--- a/P2/P1/styles.css
+++ b/P2/P1/styles.css
@@ -24,6 +24,7 @@ background-image: url("Homepage-header-image.jpg");
 background-blend-mode: multiply;
 }
 /*kan je dit lezen*/  
+/*kan je dit lezen*/  
 
 /* testafasfasdfasd12341234f */
 /* Increase the font size of the heading */
