--- a/P2/P1/styles.css
+++ b/P2/P1/styles.css
@@ -26,6 +26,8 @@ background-blend-mode: multiply;
 /*kan je dit lezen*/  
 /*kan je dit lezen*/  
 
+/* skadjfalejf */
+
 /* testafasfasdfasd12341234f */
 /* Increase the font size of the heading */
 .header h1 {
