--- a/P2/CSS/styles.css
+++ b/P2/CSS/styles.css
@@ -100,6 +100,7 @@ font-size: 60px;
 #containertext > h1 {
     margin: 10px;
     padding: 5px;
+    font-size: 4vh;
 }
 
 .homepage-text {
@@ -114,7 +115,7 @@ font-size: 60px;
 
 .homepage-text h2 {
     margin: 5px 10px;
-    font-size: 90%;
+    font-size: 110%;
 }
 
 img {
